# uplift_modeling

./: .gitignore  README.md  README.md~  pyproject.toml  requirements.txt  setup.py
data/: generate_data_for_undersampling.py  load_data.py  pickle_dataset.py
experiments/: causal_ml_test.py  conversion_rate_experiments.py  dataset_size_experiments.py  ir_undersampling_test.py  isotonic_regression_for_calibration.py  lo_experiment.py  missing_grid_search_experiments.py  run_auuc_vs_qini.py  run_crf_experiment.py  run_cvt_underclass_test.py  run_dsl_experiments.py  run_experiments.py  run_extended_undersampling_experiments.py  run_gradient_net_experiment.py  run_nn_experiments.py  run_original_DSL_DC_CVT_experiments.py  run_u_gradient_net_experiment.py  split_undersampling.py  uncertainty_experiments.py  uncertainty_vs_generated.py  undersampling_experiments.py  zenodo_experiment.py
metrics/: auuc_visualization.py  beta_difference.py  read_conversion_rate_results.py  read_grid_search_results.py  read_uncertainty_vs_generated_results.py  thesis_visualizations.py  uplift_metrics.py  uplift_visualizations.py
models/: class_variable_transformation.py  data_shared_lasso.py  deep_dsl_neural_net.py  dirichlet_gp.py  double_classifier.py  gpy_dirichlet.py  honest_uplift_tree.py  isotonic_regression.py  misc_models.py  naive_dc.py  neural_net.py  residual_model.py  revert_label_transformation.py  s_learner.py  skip_neural_net.py  undersampling_models.py  uplift_calibration.py  uplift_neural_net.py
slurm/: auuc_uncertainty_hillstrom.job  auuc_uncertainty_starbucks.job  (+9 more)
(+67 files in other folders)
